[package]
name = "mandelbrot"
version = "0.1.0"
authors = ["Grzegorz Maniak <git@Grzegorz.ie>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.84"

[dependencies.web-sys]
version = "0.3.61"
features = [
  'Document',
  'CanvasRenderingContext2d',
  'HtmlCanvasElement',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]
