[package]
name = "mandelbrot"
version = "0.1.0"
authors = ["Grzegorz Maniak <git@Grzegorz.ie>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.84"
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
version = "0.3.61"
features = [
  'Document',
  'CanvasRenderingContext2d',
  'SvgPathElement',
  'SvgTextElement',
  'HtmlCanvasElement',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'Path2d',
]

[dependencies.uuid]
version = "1.3.3"
features = [
    "v4",                
    "wasm-bindgen",
]